--- a/.github/workflows/git-sync.yml
+++ b/.github/workflows/git-sync.yml
@@ -1,6 +1,8 @@
 # .github/workflows/git-sync.yml
 
-on: push
+on:
+  schedule:
+  - cron: "*/5 * * * *"
 jobs:
   git-sync:
     runs-on: ubuntu-latest
