--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "download": "^8.0.0",
     "got": "^11.5.1",
     "http-server": "^0.12.3",
+    "mysql": "github:mysqljs/mysql",
     "png-js": "^1.0.0",
     "qrcode-terminal": "^0.12.0",
     "request": "^2.88.2",
@@ -31,7 +32,6 @@
     "ts-md5": "^1.2.9",
     "tslib": "^2.3.0",
     "tunnel": "0.0.6",
-    "ws": "^7.4.3",
-    "mysql": "2.18.1"
+    "ws": "^7.4.3"
   }
 }
